Fix Safari navigation arrow display by adding align-items: center

--- a/src/filetreediff.css
+++ b/src/filetreediff.css
@@ -58,6 +58,7 @@
 
 :host > div > div > span:not(.chunks) {
   display: flex;
+  align-items: center;
   width: 0.5em;
   cursor: pointer;
 }
